# npr-audio-scraper

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
src/: .gitkeep  audio_scraper.py  diarize_audio.py  generate_embedding.py  main.py
src/api/: __init__.py  main.py
src/audio_processor/: audio_editor.py  audio_scraper.py  audio_storage.py  backfill.py  correspondents_datasource.py  diarize_audio.py  generate_embedding.py  main.py  storage_service.py
src/db/: generate_quiz.sql  schema.sql
src/function/: Dockerfile  main.py  requirements.txt  xata-api-token
tests/: .gitkeep
